python/rregadmin/util/ustring_wrapper.py


# values for enumeration 'UStringType'
USTR_TYPE_NONE = 0
USTR_TYPE_UTF8 = 10
USTR_TYPE_UTF16LE = 20
USTR_TYPE_ASCII = 30
USTR_TYPE_ISO8859_1 = 40
UStringType = c_int # enum
# ../../../rregadmin/util/ustring.h 83
class ustring_(Structure):
    pass
ustring = ustring_
ustring_._fields_ = [
    # ../../../rregadmin/util/ustring.h 83
]
# ../../../rregadmin/util/ustring.h 89
ustr_new = _libraries['librregadmin.so.1'].ustr_new
ustr_new.restype = POINTER(ustring)
# ustr_new()
ustr_new.argtypes = []
ustr_new.__doc__ = \
"""ustring * ustr_new()
../../../rregadmin/util/ustring.h:89"""
# ../../../rregadmin/util/ustring.h 96
ustr_create = _libraries['librregadmin.so.1'].ustr_create
ustr_create.restype = POINTER(ustring)
# ustr_create(in_str)
ustr_create.argtypes = [STRING]
ustr_create.__doc__ = \
"""ustring * ustr_create(unknown * in_str)
../../../rregadmin/util/ustring.h:96"""
# ../../../rregadmin/util/ustring.h 103
ustr_create_type = _libraries['librregadmin.so.1'].ustr_create_type
ustr_create_type.restype = POINTER(ustring)
# ustr_create_type(in_str, in_str_len, in_type)
ustr_create_type.argtypes = [STRING, guint32, UStringType]
ustr_create_type.__doc__ = \
"""ustring * ustr_create_type(unknown * in_str, guint32 in_str_len, UStringType in_type)
../../../rregadmin/util/ustring.h:103"""
# ../../../rregadmin/util/ustring.h 109
ustr_copy = _libraries['librregadmin.so.1'].ustr_copy
ustr_copy.restype = POINTER(ustring)
# ustr_copy(in_ustr)
ustr_copy.argtypes = [POINTER(ustring)]
ustr_copy.__doc__ = \
"""ustring * ustr_copy(unknown * in_ustr)
../../../rregadmin/util/ustring.h:109"""
# ../../../rregadmin/util/ustring.h 115
ustr_is_valid = _libraries['librregadmin.so.1'].ustr_is_valid
ustr_is_valid.restype = gboolean
# ustr_is_valid(in_ustr)
ustr_is_valid.argtypes = [POINTER(ustring)]
ustr_is_valid.__doc__ = \
"""gboolean ustr_is_valid(unknown * in_ustr)
../../../rregadmin/util/ustring.h:115"""
# ../../../rregadmin/util/ustring.h 121
ustr_free = _libraries['librregadmin.so.1'].ustr_free
ustr_free.restype = gboolean
# ustr_free(in_ustr)
ustr_free.argtypes = [POINTER(ustring)]
ustr_free.__doc__ = \
"""gboolean ustr_free(ustring * in_ustr)
../../../rregadmin/util/ustring.h:121"""
# ../../../rregadmin/util/ustring.h 127
ustr_overwrite = _libraries['librregadmin.so.1'].ustr_overwrite
ustr_overwrite.restype = gboolean
# ustr_overwrite(in_ustrdest, in_ustrsrc)
ustr_overwrite.argtypes = [POINTER(ustring), POINTER(ustring)]
ustr_overwrite.__doc__ = \
"""gboolean ustr_overwrite(ustring * in_ustrdest, unknown * in_ustrsrc)
../../../rregadmin/util/ustring.h:127"""
# ../../../rregadmin/util/ustring.h 133
ustr_size = _libraries['librregadmin.so.1'].ustr_size
ustr_size.restype = c_int
# ustr_size(in_ustr)
ustr_size.argtypes = [POINTER(ustring)]
ustr_size.__doc__ = \
"""int ustr_size(unknown * in_ustr)
../../../rregadmin/util/ustring.h:133"""
# ../../../rregadmin/util/ustring.h 141
ustr_strlen = _libraries['librregadmin.so.1'].ustr_strlen
ustr_strlen.restype = c_int
# ustr_strlen(in_ustr)
ustr_strlen.argtypes = [POINTER(ustring)]
ustr_strlen.__doc__ = \
"""int ustr_strlen(unknown * in_ustr)
../../../rregadmin/util/ustring.h:141"""
# ../../../rregadmin/util/ustring.h 147
ustr_compare = _libraries['librregadmin.so.1'].ustr_compare
ustr_compare.restype = c_int
# ustr_compare(in_ustra, in_ustrb)
ustr_compare.argtypes = [POINTER(ustring), POINTER(ustring)]
ustr_compare.__doc__ = \
"""int ustr_compare(unknown * in_ustra, unknown * in_ustrb)
../../../rregadmin/util/ustring.h:147"""
# ../../../rregadmin/util/ustring.h 153
ustr_casecmp = _libraries['librregadmin.so.1'].ustr_casecmp
ustr_casecmp.restype = c_int
# ustr_casecmp(in_ustra, in_ustrb)
ustr_casecmp.argtypes = [POINTER(ustring), POINTER(ustring)]
ustr_casecmp.__doc__ = \
"""int ustr_casecmp(unknown * in_ustra, unknown * in_ustrb)
../../../rregadmin/util/ustring.h:153"""
# ../../../rregadmin/util/ustring.h 159
ustr_regcmp = _libraries['librregadmin.so.1'].ustr_regcmp
ustr_regcmp.restype = c_int
# ustr_regcmp(in_ustra, in_ustrb)
ustr_regcmp.argtypes = [POINTER(ustring), POINTER(ustring)]
ustr_regcmp.__doc__ = \
"""int ustr_regcmp(unknown * in_ustra, unknown * in_ustrb)
../../../rregadmin/util/ustring.h:159"""
# ../../../rregadmin/util/ustring.h 165
ustr_equal = _libraries['librregadmin.so.1'].ustr_equal
ustr_equal.restype = gboolean
# ustr_equal(in_ustra, in_ustrb)
ustr_equal.argtypes = [POINTER(ustring), POINTER(ustring)]
ustr_equal.__doc__ = \
"""gboolean ustr_equal(unknown * in_ustra, unknown * in_ustrb)
../../../rregadmin/util/ustring.h:165"""
# ../../../rregadmin/util/ustring.h 171
ustr_compare_str = _libraries['librregadmin.so.1'].ustr_compare_str
ustr_compare_str.restype = c_int
# ustr_compare_str(in_ustra, in_str)
ustr_compare_str.argtypes = [POINTER(ustring), STRING]
ustr_compare_str.__doc__ = \
"""int ustr_compare_str(unknown * in_ustra, unknown * in_str)
../../../rregadmin/util/ustring.h:171"""
# ../../../rregadmin/util/ustring.h 177
ustr_casecmp_str = _libraries['librregadmin.so.1'].ustr_casecmp_str
ustr_casecmp_str.restype = c_int
# ustr_casecmp_str(in_ustra, in_str)
ustr_casecmp_str.argtypes = [POINTER(ustring), STRING]
ustr_casecmp_str.__doc__ = \
"""int ustr_casecmp_str(unknown * in_ustra, unknown * in_str)
../../../rregadmin/util/ustring.h:177"""
# ../../../rregadmin/util/ustring.h 183
ustr_equal_str = _libraries['librregadmin.so.1'].ustr_equal_str
ustr_equal_str.restype = gboolean
# ustr_equal_str(in_ustra, in_str)
ustr_equal_str.argtypes = [POINTER(ustring), STRING]
ustr_equal_str.__doc__ = \
"""gboolean ustr_equal_str(unknown * in_ustra, unknown * in_str)
../../../rregadmin/util/ustring.h:183"""
# ../../../rregadmin/util/ustring.h 193
ustr_encode = _libraries['librregadmin.so.1'].ustr_encode
ustr_encode.restype = POINTER(GByteArray)
# ustr_encode(in_ustr, in_type)
ustr_encode.argtypes = [POINTER(ustring), UStringType]
ustr_encode.__doc__ = \
"""GByteArray * ustr_encode(unknown * in_ustr, UStringType in_type)
../../../rregadmin/util/ustring.h:193"""
# ../../../rregadmin/util/ustring.h 205
ustr_generic_encode = _libraries['librregadmin.so.1'].ustr_generic_encode
ustr_generic_encode.restype = POINTER(GByteArray)
# ustr_generic_encode(in_ustr, in_code_name)
ustr_generic_encode.argtypes = [POINTER(ustring), STRING]
ustr_generic_encode.__doc__ = \
"""GByteArray * ustr_generic_encode(unknown * in_ustr, unknown * in_code_name)
../../../rregadmin/util/ustring.h:205"""
# ../../../rregadmin/util/ustring.h 211
ustr_as_utf8 = _libraries['librregadmin.so.1'].ustr_as_utf8
ustr_as_utf8.restype = STRING
# ustr_as_utf8(in_ustr)
ustr_as_utf8.argtypes = [POINTER(ustring)]
ustr_as_utf8.__doc__ = \
"""unknown * ustr_as_utf8(unknown * in_ustr)
../../../rregadmin/util/ustring.h:211"""
# ../../../rregadmin/util/ustring.h 217
ustr_index = _libraries['librregadmin.so.1'].ustr_index
ustr_index.restype = gunichar
# ustr_index(in_ustr, in_index)
ustr_index.argtypes = [POINTER(ustring), gssize]
ustr_index.__doc__ = \
"""gunichar ustr_index(unknown * in_ustr, gssize in_index)
../../../rregadmin/util/ustring.h:217"""
# ../../../rregadmin/util/ustring.h 225
ustr_index_unsafe = _libraries['librregadmin.so.1'].ustr_index_unsafe
ustr_index_unsafe.restype = gunichar
# ustr_index_unsafe(in_ustr, in_index)
ustr_index_unsafe.argtypes = [POINTER(ustring), gssize]
ustr_index_unsafe.__doc__ = \
"""gunichar ustr_index_unsafe(unknown * in_ustr, gssize in_index)
../../../rregadmin/util/ustring.h:225"""
# ../../../rregadmin/util/ustring.h 231
ustr_last_char = _libraries['librregadmin.so.1'].ustr_last_char
ustr_last_char.restype = c_int
# ustr_last_char(in_ustr)
ustr_last_char.argtypes = [POINTER(ustring)]
ustr_last_char.__doc__ = \
"""int ustr_last_char(unknown * in_ustr)
../../../rregadmin/util/ustring.h:231"""
# ../../../rregadmin/util/ustring.h 237
ustr_clear = _libraries['librregadmin.so.1'].ustr_clear
ustr_clear.restype = gboolean
# ustr_clear(in_ustr)
ustr_clear.argtypes = [POINTER(ustring)]
ustr_clear.__doc__ = \
"""gboolean ustr_clear(ustring * in_ustr)
../../../rregadmin/util/ustring.h:237"""
# ../../../rregadmin/util/ustring.h 243
ustr_trim_front = _libraries['librregadmin.so.1'].ustr_trim_front
ustr_trim_front.restype = gboolean
# ustr_trim_front(in_ustr, skip)
ustr_trim_front.argtypes = [POINTER(ustring), size_t]
ustr_trim_front.__doc__ = \
"""gboolean ustr_trim_front(ustring * in_ustr, size_t skip)
../../../rregadmin/util/ustring.h:243"""
# ../../../rregadmin/util/ustring.h 249
ustr_trim_back = _libraries['librregadmin.so.1'].ustr_trim_back
ustr_trim_back.restype = gboolean
# ustr_trim_back(in_ustr, skip)
ustr_trim_back.argtypes = [POINTER(ustring), size_t]
ustr_trim_back.__doc__ = \
"""gboolean ustr_trim_back(ustring * in_ustr, size_t skip)
../../../rregadmin/util/ustring.h:249"""
# ../../../rregadmin/util/ustring.h 255
ustr_trim_ws_front = _libraries['librregadmin.so.1'].ustr_trim_ws_front
ustr_trim_ws_front.restype = gboolean
# ustr_trim_ws_front(in_ustr)
ustr_trim_ws_front.argtypes = [POINTER(ustring)]
ustr_trim_ws_front.__doc__ = \
"""gboolean ustr_trim_ws_front(ustring * in_ustr)
../../../rregadmin/util/ustring.h:255"""
# ../../../rregadmin/util/ustring.h 261
ustr_trim_ws_back = _libraries['librregadmin.so.1'].ustr_trim_ws_back
ustr_trim_ws_back.restype = gboolean
# ustr_trim_ws_back(in_ustr)
ustr_trim_ws_back.argtypes = [POINTER(ustring)]
ustr_trim_ws_back.__doc__ = \
"""gboolean ustr_trim_ws_back(ustring * in_ustr)
../../../rregadmin/util/ustring.h:261"""
# ../../../rregadmin/util/ustring.h 267
ustr_trim_ws = _libraries['librregadmin.so.1'].ustr_trim_ws
ustr_trim_ws.restype = gboolean
# ustr_trim_ws(in_ustr)
ustr_trim_ws.argtypes = [POINTER(ustring)]
ustr_trim_ws.__doc__ = \
"""gboolean ustr_trim_ws(ustring * in_ustr)
../../../rregadmin/util/ustring.h:267"""
# ../../../rregadmin/util/ustring.h 273
ustr_strdown = _libraries['librregadmin.so.1'].ustr_strdown
ustr_strdown.restype = gboolean
# ustr_strdown(in_ustr)
ustr_strdown.argtypes = [POINTER(ustring)]
ustr_strdown.__doc__ = \
"""gboolean ustr_strdown(ustring * in_ustr)
../../../rregadmin/util/ustring.h:273"""
# ../../../rregadmin/util/ustring.h 279
ustr_strup = _libraries['librregadmin.so.1'].ustr_strup
ustr_strup.restype = gboolean
# ustr_strup(in_ustr)
ustr_strup.argtypes = [POINTER(ustring)]
ustr_strup.__doc__ = \
"""gboolean ustr_strup(ustring * in_ustr)
../../../rregadmin/util/ustring.h:279"""
# ../../../rregadmin/util/ustring.h 287
ustr_wrapa = _libraries['librregadmin.so.1'].ustr_wrapa
ustr_wrapa.restype = gboolean
# ustr_wrapa(in_ustr, in_str, in_prefix, in_column)
ustr_wrapa.argtypes = [POINTER(ustring), STRING, STRING, c_int]
ustr_wrapa.__doc__ = \
"""gboolean ustr_wrapa(ustring * in_ustr, unknown * in_str, unknown * in_prefix, int in_column)
../../../rregadmin/util/ustring.h:287"""
# ../../../rregadmin/util/ustring.h 295
ustr_wrap = _libraries['librregadmin.so.1'].ustr_wrap
ustr_wrap.restype = gboolean
# ustr_wrap(in_ustr, in_str, in_prefix, in_column)
ustr_wrap.argtypes = [POINTER(ustring), STRING, STRING, c_int]
ustr_wrap.__doc__ = \
"""gboolean ustr_wrap(ustring * in_ustr, unknown * in_str, unknown * in_prefix, int in_column)
../../../rregadmin/util/ustring.h:295"""
# ../../../rregadmin/util/ustring.h 304
ustr_printf = _libraries['librregadmin.so.1'].ustr_printf
ustr_printf.restype = gboolean
# ustr_printf(in_ustr, fmt)
ustr_printf.argtypes = [POINTER(ustring), STRING]
ustr_printf.__doc__ = \
"""gboolean ustr_printf(ustring * in_ustr, unknown * fmt)
../../../rregadmin/util/ustring.h:304"""
# ../../../rregadmin/util/ustring.h 311
ustr_printfa = _libraries['librregadmin.so.1'].ustr_printfa
ustr_printfa.restype = gboolean
# ustr_printfa(in_ustr, fmt)
ustr_printfa.argtypes = [POINTER(ustring), STRING]
ustr_printfa.__doc__ = \
"""gboolean ustr_printfa(ustring * in_ustr, unknown * fmt)
../../../rregadmin/util/ustring.h:311"""
# <built-in> 0
class __va_list_tag(Structure):
    pass
# ../../../rregadmin/util/ustring.h 319
ustr_vprintf = _libraries['librregadmin.so.1'].ustr_vprintf
